# elementary-os-archetype

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  venv.mk
src/elementary_os_archetype/: archetype.py  cli.py  elementary_os_archetype.py
src/elementary_os_archetype/archetypes/simple/: archetype.yaml
src/elementary_os_archetype/archetypes/simple/{{cookiecutter.repo_name}}/: README.md
src/elementary_os_archetype/templates/mcve/: archetype.yaml
src/elementary_os_archetype/templates/mcve/{{cookiecutter.project_simple_name}}/: CONTRIBUTING.md  Makefile  run
src/elementary_os_archetype/templates/mcve/{{cookiecutter.project_simple_name}}/data/: meson.build
src/elementary_os_archetype/templates/simple/: archetype.yaml
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/: README.md  meson.build  {{cookiecutter.project_id}}.yml
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/data/: {{cookiecutter.project_id}}.appdata.xml.in.in  {{cookiecutter.project_id}}.gresource.xml
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/src/: Application.vala  meson.build
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/src/Layouts/: MainLayout.vala
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/src/Services/: ActionManager.vala
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/src/Widgets/: HeaderBar.vala
src/elementary_os_archetype/templates/simple/{{cookiecutter.project_simple_name}}/src/Windows/: MainWindow.vala
(+4 files in other folders)
