[metadata]
name=elementary-os-archetype
version=attr: elementary_os_archetype.version.__version__
author=Andrew Vojak
author_email=andrew.vojak@gmail.com
description=elementary OS application archetype
long_description=file:README.md
long_description_content_type=text/markdown
license=GPLv3
url=https://github.com/avojak/elementary-os-archetype
keywords=elementary, archetype, linux, vala, template
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
python_requires=>=3.6, <4

[options]
package_dir=
    =src
packages=find:
install_requires=
    cookiecutter
include_package_data=True

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    elementary-os-archetype=elementary_os_archetype.cli:run